# redmine_mcp_tools

./: .gitignore  README.md  manifest.json  pyproject.toml
docs/: Redmine - MCP Tool.pptx  Redmine MCP Tool - Technical Doc.docx  Redmine MCP Tool - Technical Documentation.docx
docs/output_sample/: 10_days_report.html  latest_dashboard.html  redmine_dashboard.html
redmine_mcp_tools/: .env  hooks.py  modules.txt
redmine_mcp_tools/assistant_tools/: __init__.py  mcp_custom_tools.py  test_file.py
